--- a/index.html
+++ b/index.html
@@ -7,9 +7,24 @@
     <link rel="stylesheet" href="./Assets/css/styles.css">
 </head>
 <body>
+  <header>
+    <h1 class="Dashboard">Weather Dashboard</h1>
+  </header>
+  <div class="container">
+      <!-- Main weather data output  -->
+  <div class="main">
+    <h3 class="location">City<span class="date">date</span></h3>
+    <p>Temperature: <span class="tempC"></span>/ <span class="tempF"></span></p>
+    <p>Humidity: <span class="humid"></span></p>
+    <p>Wind Speed: <span class="wind"></span></p>
+    <p>UV Index: <span class="uvI"></span></p>
+  </div>
+  <!-- sub weather data output -->
+  <div>
+    <h3>5-Day Forecast</h3>
     
-
-
+  </div>
+  </div>
 
 <script src="./Assets/js/app.js"></script>
 </body>
