Update: Location service fetching

--- a/index.html
+++ b/index.html
@@ -8,21 +8,22 @@
 </head>
 <body>
   <header>
-    <h1 class="Dashboard">Weather Dashboard</h1>
+    <h1 class="dashboard">Weather Dashboard</h1>
+    <h3 class="notification"></h3>
   </header>
   <div class="container">
       <!-- Main weather data output  -->
   <div class="main">
     <h3 class="location">City<span class="date">date</span></h3>
-    <p>Temperature: <span class="tempC"></span>/ <span class="tempF"></span></p>
-    <p>Humidity: <span class="humid"></span></p>
-    <p>Wind Speed: <span class="wind"></span></p>
+    <p>Temperature: <span class="tempC">°c</span>/ <span class="tempF">°f</span></p>
+    <p>Humidity: <span class="humid">%</span></p>
+    <p>Wind Speed: <span class="wind">mph</span></p>
     <p>UV Index: <span class="uvI"></span></p>
   </div>
   <!-- sub weather data output -->
   <div>
     <h3>5-Day Forecast</h3>
-    
+
   </div>
   </div>
 
