Update: Main weather app working.

--- a/index.html
+++ b/index.html
@@ -14,7 +14,9 @@
   <div class="container">
       <!-- Main weather data output  -->
   <div class="main">
-    <h3 class="location">City<span class="date">date</span></h3>
+    <h3 class="location">City<span class="date">date</span> </h3>
+    <span class="weather-icon"></span>
+    <p class="wDescription"></p>
     <p>Temperature: <span class="tempC">°c</span>/ <span class="tempF">°f</span></p>
     <p>Humidity: <span class="humid">%</span></p>
     <p>Wind Speed: <span class="wind">mph</span></p>
