Update: Working weather fetch request:

--- a/index.html
+++ b/index.html
@@ -95,5 +95,6 @@
   </footer>
 <script src="./Assets/js/app.js"></script>
 <script src="./Assets/js/search.js"></script>
+<script src="./Assets/js/forecast.js"></script>
 </body>
 </html>
