Update: Working 5 Day forecast

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 
   <div class="container-lg-12 c1">
      <div class="row">
-      <div class="col-lg-2 c3">
+      <div class="col-lg-3 col-md-8 c3">
         <div class="main">
           <h3>Search City or Zip Code:</h3>
           <!-- search function -->
@@ -60,7 +60,7 @@
         <!-- empty div for separation -->
       </div>
       <!-- Main weather data output  -->
-      <div class="col-lg-2 c2">
+      <div class="col-lg-3 col-md-8 c2">
         <div class="main">
           <h3 class="location">City<span class="date">date</span> </h3>
           <span class="weather-icon"></span>
@@ -74,15 +74,57 @@
      </div>
      <div class="row">
         <!-- 5 day forcast section -->
-        <div class="col-sm-4 headerbg">
-          <h3>5-Day Forecast</h3>
+        <div class="col-md-4 col-md-8 headerbg">
+          <h2>5-Day Forecast</h2>
         </div>
      </div>
-     <!-- 5day forecast tiles -->
-     <div class="row">
+
+               <!-- 5day forecast tiles -->
+               <div class="row">
+                <div class="col-sm-2 col-sm-1 c4">
+                  <h3 id="date1">Test</h3>
+                  <span class="weather-icon"></span>
+                  <p class="icon1"></p>
+                  <p>Temperature: <span class="tempC1">°c</span>/ <span class="tempF1">°f</span></p>
+                  <p>Humidity: <span class="humid1">%</span></p>
+                  <p>Wind Speed: <span class="wind1">mph</span></p>
+                </div>
+                <div class="col-sm-2 col-sm-1 c4">
+                  <h3 id="date2">Test</h3>
+                  <span class="weather-icon"></span>
+                  <p class="icon2"></p>
+                  <p>Temperature: <span class="tempC2">°c</span>/ <span class="tempF2">°f</span></p>
+                  <p>Humidity: <span class="humid2">%</span></p>
+                  <p>Wind Speed: <span class="wind2">mph</span></p>
+                </div>
+                <div class="col-sm-2 col-sm-1 c4">
+                  <h3 id="date3">Test</h3>
+                  <span class="weather-icon"></span>
+                  <p class="icon3"></p>
+                  <p>Temperature: <span class="tempC3">°c</span>/ <span class="tempF3">°f</span></p>
+                  <p>Humidity: <span class="humid3">%</span></p>
+                  <p>Wind Speed: <span class="wind3">mph</span></p>
+                </div>
+                <div class="col-sm-2 col-sm-1 c4">
+                  <h3 id="date4">Test</h3>
+                  <span class="weather-icon"></span>
+                  <p class="icon4"></p>
+                  <p>Temperature: <span class="tempC4">°c</span>/ <span class="tempF4">°f</span></p>
+                  <p>Humidity: <span class="humid4">%</span></p>
+                  <p>Wind Speed: <span class="wind4">mph</span></p>
+                </div>
+                <div class="col-sm-2 col-sm-1 c4">
+                  <h3 id="date5">Test</h3>
+                  <span class="weather-icon"></span>
+                  <p class="icon5"></p>
+                  <p>Temperature: <span class="tempC5">°c</span>/ <span class="tempF5">°f</span></p>
+                  <p>Humidity: <span class="humid5">%</span></p>
+                  <p>Wind Speed: <span class="wind5">mph</span></p>
+                </div>
 
 
      </div>
+
   </div>
 
     
