--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     </button>
   
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
-      <!-- <ul class="navbar-nav mr-auto">
+      <ul class="navbar-nav mr-auto">
         <li class="nav-item active">
           <a class="nav-link" href="./index.html">About</a>
         </li>
@@ -29,7 +29,7 @@
         <li class="nav-item active">
             <a class="nav-link" href="./contact.html">Contact</a>
           </li>
-      </ul> -->
+      </ul>
       <img src="https://icons.iconarchive.com/icons/alex-t/fresh-fruit/512/watermelon-icon.png" width="30" height="30" alt="icon" loading="lazy">
     </div>
   </nav>
@@ -141,5 +141,6 @@
 <script src="./Assets/js/app.js"></script>
 <script src="./Assets/js/search.js"></script>
 <script src="./Assets/js/forecast.js"></script>
+<script src="./Assets/js/storage.js"></script>
 </body>
 </html>
