Update: reamde and buttons added

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     </button>
   
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
-      <ul class="navbar-nav mr-auto">
+      <!-- <ul class="navbar-nav mr-auto">
         <li class="nav-item active">
           <a class="nav-link" href="./index.html">About</a>
         </li>
@@ -29,7 +29,7 @@
         <li class="nav-item active">
             <a class="nav-link" href="./contact.html">Contact</a>
           </li>
-      </ul>
+      </ul> -->
       <img src="https://icons.iconarchive.com/icons/alex-t/fresh-fruit/512/watermelon-icon.png" width="30" height="30" alt="icon" loading="lazy">
     </div>
   </nav>
@@ -52,6 +52,11 @@
             <input class="form-control mr-sm-2" type="search" placeholder="Type in city name or zip" aria-label="Search" id="userInput">
             <button class="btn btn-outline-success my-2 my-sm-0" type="submit" id="searchBtn">Search</button>
           </form>
+
+          <button class="btn btn-outline-primary my-2 my-sm-0 btnL" type="submit" value="London">London</button><br>
+          <button class="btn btn-outline-primary my-2 my-sm-0 btnL" type="submit" value="Sidney">Sidney</button><br>
+          <button class="btn btn-outline-primary my-2 my-sm-0 btnL" type="submit" value="Tokyo">Toyko</button><br>
+          <button class="btn btn-outline-primary my-2 my-sm-0 btnL" type="submit" value="Philippines">Philippines</button><br>
 
         </div>
       </div>
@@ -141,6 +146,6 @@
 <script src="./Assets/js/app.js"></script>
 <script src="./Assets/js/search.js"></script>
 <script src="./Assets/js/forecast.js"></script>
-<script src="./Assets/js/storage.js"></script>
+<script src="./Assets/js/Button.js"></script>
 </body>
 </html>
