Update: Working buttons and saves recent location to the extra button

--- a/index.html
+++ b/index.html
@@ -34,7 +34,6 @@
     </div>
   </nav>
   <!-- nav ends here -->
-
   <header>
     <div class="container-md c1">
       <h1 class="dashboard">Weather Dashboard</h1>
@@ -52,12 +51,12 @@
             <input class="form-control mr-sm-2" type="search" placeholder="Type in city name or zip" aria-label="Search" id="userInput">
             <button class="btn btn-outline-success my-2 my-sm-0" type="submit" id="searchBtn">Search</button>
           </form>
-
-          <button class="btn btn-outline-primary my-2 my-sm-0 btnL" type="submit" value="London">London</button><br>
-          <button class="btn btn-outline-primary my-2 my-sm-0 btnL" type="submit" value="Sidney">Sidney</button><br>
-          <button class="btn btn-outline-primary my-2 my-sm-0 btnL" type="submit" value="Tokyo">Toyko</button><br>
-          <button class="btn btn-outline-primary my-2 my-sm-0 btnL" type="submit" value="Philippines">Philippines</button><br>
-
+          <button class="btn btn-outline-primary my-2 my-sm-0 btnL" type="submit" id="cache">History</button><br>
+          <button class="btn btn-outline-primary my-2 my-sm-0 btnL" type="submit" id="London">London</button><br>
+          <button class="btn btn-outline-primary my-2 my-sm-0 btnL" type="submit" id="Sidney">Sidney</button><br>
+          <button class="btn btn-outline-primary my-2 my-sm-0 btnL" type="submit" id="Tokyo">Toyko</button><br>
+          <button class="btn btn-outline-primary my-2 my-sm-0 btnL" type="submit" id="Philippines">Philippines</button><br>
+          
         </div>
       </div>
       <!-- Div separator -->
